# Phronesis

./: Cargo.toml  README.md
docs/: INTEGRATION-ARD.md
src/: bootstrap.rs  config.rs  error.rs  lib.rs  main.rs  server.rs  types.rs
src/evolution/: habit.rs  mod.rs  move_action.rs  rename_action.rs
src/fs/: action.rs  meta.rs  mod.rs  naming.rs  skills.rs  warnings.rs
src/search/: embedding.rs  grep.rs  mod.rs  suggest.rs  vector_store.rs
tests/integration/: ac01_embed_search.rs  ac02_grep_search.rs  ac03_suggest_write.rs  ac04_naming.rs  ac05_persistence.rs  ac07_move_rename.rs  ac08_habit.rs  ac09_warning_log.rs  ac10_warning_query.rs  ac11_append_only.rs  ac12_meta_append.rs  ac13_bootstrap.rs  ac14_skills_append.rs  mod.rs
