[package]
name = "phronesis"
version = "0.1.0"
edition = "2021"

[features]
test-utils = []

[dependencies]
# MCP Protocol (v1.4.x -- official Rust SDK)
rmcp = { version = "1.4", features = ["server", "transport-io", "macros"] }

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Vector Search (HNSW) -- note: feature is "with-serde", not "serde"
instant-distance = { version = "0.6", features = ["with-serde"] }

# Local Embedding (default, no API key needed)
fastembed = "5"

# HTTP Client (for optional OpenAI embedding)
reqwest = { version = "0.12", features = ["json"] }

# Grep / Regex
regex = "1"
walkdir = "2"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"

[[test]]
name = "integration"
path = "tests/integration/mod.rs"
required-features = ["test-utils"]
